# matrix-telegram-importer

./: README.es.md  README.md  pyproject.toml  requirements.txt
telegram_to_matrix/: __init__.py  checkpoint.py  cli.py  logging_conf.py  mapping.py  matrix_client.py  media.py  mini_delete_rooms.py  models.py  parser.py  purge.py  reset_matrix_rooms.py  retrying.py
templates/: room_map.yaml  user_map.yaml
tests/: test_checkpoint.py  test_cli.py  test_mapping.py  test_matrix_client.py  test_parser.py  test_purge.py  test_retrying.py
