[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telegram-to-matrix-backfill"
version = "0.1.0"
description = "Backfill Telegram Desktop exports into Matrix"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31.0",
  "PyYAML>=6.0",
  "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "responses>=0.25.0",
]

[tool.setuptools.packages.find]
include = ["telegram_to_matrix*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
